[[bin]]
name = "main"
path = "./main.rs"

[package]
name = "wufflex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.2.0"
tungstenite = "0.13.0"
tokio-tungstenite = "0.15.0"
bollard = "0.14.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
actix = "0.13.0"
actix-web-actors = "4.2.0"
tokio-executor = "0.1.10"
